Improve SpringBoot/GAE intergation with more examples/